WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286012
[WebGPU] VideoTextures sometimes fail to load because bytesPerRow(1920) is less than bytesInLastRow(5180)
https://bugs.webkit.org/show_bug.cgi?id=286012
Summary
[WebGPU] VideoTextures sometimes fail to load because bytesPerRow(1920) is le...
Mike Wyrzykowski
Reported
2025-01-15 11:37:42 PST
[WebGPU] VideoTextures sometimes fail to load because bytesPerRow(1920) is less than bytesInLastRow(5180) Repros on:
https://playcanvas.vercel.app/#/graphics/video-texture
https://playcanvas.vercel.app/#/graphics/reflection-box
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-15 11:44:33 PST
<
rdar://problem/142987498
>
Mike Wyrzykowski
Comment 2
2025-01-15 11:54:52 PST
It looks like GPUQueue.copyExternalImageToTexture video import path, see
> static void getImageBytesFromVideoFrame(const RefPtr<VideoFrame>& videoFrame, ImageDataCallback&& callback)
is not working as expected
Mike Wyrzykowski
Comment 3
2025-01-16 22:19:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39177
EWS
Comment 4
2025-01-18 13:41:24 PST
Committed
289122@main
(f0e83b3447bf): <
https://commits.webkit.org/289122@main
> Reviewed commits have been landed. Closing PR #39177 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug