[WebGPU] VideoTextures sometimes fail to load because bytesPerRow(1920) is less than bytesInLastRow(5180) https://bugs.webkit.org/show_bug.cgi?id=286012 rdar://142987498

Reviewed by Tadeu Zagallo.

GPUQueue.copyExternalImageToTexture(...) was not correctly handling
420v and other biplanar formats.

Support this is an identical manner to WebGL via VideoFrameObjectHeap.

It is far more efficient to use GPUDevice.importExternalTexture(...) but
sites which choose to use GPUQueue.copyExternalImageToTexture(...) for any
reason should still observe correct behavior.

* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::getImageBytesFromVideoFrame):
(WebCore::imageBytesForSource):
(WebCore::GPUQueue::copyExternalImageToTexture):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUQueueImpl.cpp:
(WebCore::WebGPU::QueueImpl::getNativeImage):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUQueueImpl.h:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUQueue.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::errorValidatingCopyBufferToTexture const):
(WebGPU::CommandEncoder::errorValidatingCopyTextureToBuffer const):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::errorValidatingWriteTexture const):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::errorValidatingLinearTextureData):
(WebGPU::Texture::validateLinearTextureData): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteQueueProxy.cpp:
(WebKit::WebGPU::RemoteQueueProxy::RemoteQueueProxy):
(WebKit::WebGPU::RemoteQueueProxy::getNativeImage):
(WebKit::WebGPU::RemoteQueueProxy::protectedVideoFrameObjectHeapProxy const):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteQueueProxy.h:

Canonical link: https://commits.webkit.org/289122@main